feature: Application, Barrier abstraction and Logging expansion